fix(sidebar-contact): wrap long email. fixes T3359.
Summary: add a snippet of css

Test Plan: tested manually

Reviewers: bengotow

Maniphest Tasks: T3359

Differential Revision: https://phab.nylas.com/D1966

--- a/internal_packages/sidebar-fullcontact/stylesheets/sidebar-fullcontact.less
+++ b/internal_packages/sidebar-fullcontact/stylesheets/sidebar-fullcontact.less
@@ -36,6 +36,10 @@
       padding: 0 0 @spacing-standard 0;
       font-size: @font-size-smaller;
     }
+
+    .email {
+      word-break: break-all;
+    }
   }
 
   .social-profiles {
